api/swimos_schema/src/schema/tests/derive/validated_form/generic_no_default.stderr
error[E0277]: the trait bound `S<Invalid>: StructuralWritable` is not satisfied
  --> src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
   |
30 |     let _s = Form::as_value(&S { a: 1, f: Invalid });
   |              -------------- ^^^^^^^^^^^^^^^^^^^^^^^ the trait `StructuralWritable` is not implemented for `S<Invalid>`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the following other types implement trait `StructuralWritable`:
             bool
             i32
             i64
             usize
             u32
             u64
             f64
             WritableRef<'a, T>
           and $N others
note: required by a bound in `as_value`
  --> $WORKSPACE/api/swimos_form/src/lib.rs
   |
   | pub trait Form: StructuralReadable + StructuralWritable {
   |                                      ^^^^^^^^^^^^^^^^^^ required by this bound in `Form::as_value`
   |     /// Returns this object represented as a value.
   |     fn as_value(&self) -> Value {
   |        -------- required by a bound in this associated function

error[E0277]: the trait bound `S<Invalid>: RecognizerReadable` is not satisfied
  --> src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
   |
30 |     let _s = Form::as_value(&S { a: 1, f: Invalid });
   |              -------------- ^^^^^^^^^^^^^^^^^^^^^^^ the trait `RecognizerReadable` is not implemented for `S<Invalid>`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the following other types implement trait `RecognizerReadable`:
             bool
             i32
             i64
             usize
             u32
             u64
             f64
             swimos_route::route_uri::RouteUri
           and $N others
   = note: required for `S<Invalid>` to implement `StructuralReadable`
note: required by a bound in `as_value`
  --> $WORKSPACE/api/swimos_form/src/lib.rs
   |
   | pub trait Form: StructuralReadable + StructuralWritable {
   |                 ^^^^^^^^^^^^^^^^^^ required by this bound in `Form::as_value`
   |     /// Returns this object represented as a value.
   |     fn as_value(&self) -> Value {
   |        -------- required by a bound in this associated function
